compiler/tests/en/errors/print_parens.salam
// EXPECT: print arguments must not be wrapped in parentheses
func main:
    println (2 + 3)
end
